--- a/package.json
+++ b/package.json
@@ -2,12 +2,11 @@
   "name": "clipping-discord",
   "version": "1.0.0",
   "main": "dist/index.js",
-  "type": "module",
   "scripts": {
     "build": "tsc",
     "start": "npm run build && node dist/index.js",
-    "dev": "nodemon --exec ts-node --esm src/index.ts",
-    "deploy": "ts-node --esm deploy-commands.ts",
+    "dev": "nodemon --exec tsx src/index.ts",
+    "deploy": "tsx deploy-commands.ts",
     "lint": "eslint src/**/*.ts",
     "lint:fix": "eslint src/**/*.ts --fix",
     "format": "prettier --write src/**/*.ts",
@@ -19,10 +18,11 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@types/better-sqlite3": "^7.6.13",
+    "better-sqlite3": "^12.2.0",
     "discord.js": "^14.22.1",
     "dotenv": "^17.2.1",
-    "express": "^5.1.0",
-    "mongoose": "^8.18.0",
+    "sqlite3": "^5.1.7",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
@@ -37,6 +37,7 @@
     "nodemon": "^3.1.10",
     "prettier": "^3.6.2",
     "ts-node": "^10.9.2",
+    "tsx": "^4.20.5",
     "typescript": "^5.9.2"
   }
 }
