--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "clipping-discord",
   "version": "1.0.0",
+  "type": "commonjs",
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
